literally no problems and it's late what am i doing

--- a/codeforces/contests/1986/1986.md
+++ b/codeforces/contests/1986/1986.md
@@ -1,10 +1,16 @@
 # Codeforces Round 954 (#1986)
 
-## F - Non-academic Problem
-
+## F. Non-academic Problem
 The number of pairs won't decrease if we remove an edge (from $U$ to $V$) in a cycle, because there is simply a second path from $U$ to $V$. In other words, we want to find the number of edges not in a cycle, (bridges), and for each one try removing it.<br>
 
 Initially I came up with a complicated spanning tree (Kruskal's, to find one edge in every cycle) + LCA (binary jumping, to find the full cycle) in order to rule out all edges in a cycle. Trying to remove all bridges ($U,V$) is pretty easy, just permutate the number of vertices below $V$, and also above $U$, in the spanning tree.
 
 But we can instead use Tarjan's existing [bridge-finding algorithm](https://codeforces.com/blog/entry/71146).
 The second part is done in the same way as before.
+
+## G. Permutation Problem (Simple Version)
+Pretty happy I solved this one by myself considering that I was stuck for 20 min before everything started coming together. 
+
+I'll instead refer to the permutation as $a_i$. Write each $a_i$ in the form ${p_i\over{q_i}}$. $p_i={a_i\over{gcd(a_i,i)}}$ and $q_i={i\over{gcd(a_i,i)}}$. Having gotten rid of the common factors, we can now say that a pair $(i,j)$ is formed if $p_i$ divides $q_j$, and $p_j$ divides $q_i$. 
+
+So store a map $f[d][p]$ which is the amount of $p_i/q_i$ such that $p_i$ divides $d$ and $p=q_i$. For each $p_i$, first go through all its divisors $d_i$ and add $f[q_i][d_i]$ to the answer; this is the amount of pairs that are formed with this $i$. Then we must update $f$, so loop through all the divisors again and increment $f[d_i][q_i]$ by $1$. Because we loop through divisors each time, the runtime is about $O(N\sqrt{N})$.
