--- a/codeforces/contests/1986/1986.md
+++ b/codeforces/contests/1986/1986.md
@@ -13,4 +13,4 @@ Pretty happy I solved this one by myself considering that I was stuck for 20 min
 
 I'll instead refer to the permutation as $a_i$. Write each $a_i$ in the form ${p_i\over{q_i}}$. $p_i={a_i\over{gcd(a_i,i)}}$ and $q_i={i\over{gcd(a_i,i)}}$. Having gotten rid of the common factors, we can now say that a pair $(i,j)$ is formed if $p_i$ divides $q_j$, and $p_j$ divides $q_i$. 
 
-So store a map $f[d][p]$ which is the amount of $p_i/q_i$ such that $p_i$ divides $d$ and $p=q_i$. For each $p_i$, first go through all its divisors $d_i$ and add $f[q_i][d_i]$ to the answer; this is the amount of pairs that are formed with this $i$. Then we must update $f$, so loop through all the divisors again and increment $f[d_i][q_i]$ by $1$. Because we loop through divisors each time, the runtime is about $O(N\sqrt{N})$.
+So store a map $f[d][p]$ which is the amount of $p_i\over{q_i}$ such that $d$ divides $p_i$ and $p=q_i$. So for each $p_i$, you can quickly search up all $q_j$ such that $q_i$ divides $p_j$. To ensure that $q_j$ divides $p_i$, go through all of $p_i$'s divisors $d_i$ and add $f[q_i][d_i]$ to the answer; this is the amount of pairs that are formed with this $i$. Then we must update $f$, so loop through all the divisors again and increment $f[d_i][q_i]$ by $1$. Because we loop through divisors each time, the runtime is about $O(N\sqrt{N})$.
