--- a/codeforces/contests/1994/1994.md
+++ b/codeforces/contests/1994/1994.md
@@ -1,23 +1,30 @@
 # Codeforces Round 959 (#1994)
 
-## F - Stardew Valley (estimate: 2500)
+## E. Wooden Game
+Ok finally touching this contest again god forbid (Stardew Valley is still the most rigorous experience to date).
 
+By repeatedly removing leaves from a tree, we can get the tree size to any number between $1$ and $n_i$. After this, just remove the whole tree in one operation. 
+
+Assume the number we've taken is $x$. We really don't care about any of the deleted nodes; even if some deletion process could have contributed the bits forming a number $y$, $x|y\le{a_i}$ anyways, so we could have just picked $x|y$ instead of $x$ in the first place. $x|y\le{a_i}$ is true because whatever deletion process you do, you can't achieve a bitwise or greater than $n_i$.
+
+Second, we want to prioritize adding higher bits because $2^k$ is greater than the sum of all $2^i$ satisfying $0\le{i}<k$. This means adding the $kth$ bit is better than adding all bits $0,1,\cdots,k-1$. So an optimal algorithm is to loop through all bits in decreasing order and subtract it from the largest remaining number (if possible). Do this with a priority queue.
+
+Time complexity is $O(NlogN)$; $N=\sum{n_i}$.
+
+## F. Stardew Valley (estimate: 2500)
 Feel like this is the hardest problem I've done; took me many hours (probably like $5$-$6$) and checking my progress with the editorial, but I technically didn't read anything that instantly gave away something/that I completely understood so in a sense I still made most of the progress by myself.
 
 ### Solution Part 1 (easiest part)
-
 There is the note that the graph is connected only by mandatory edges, so we can always find an Eulerian cycle if and only if the degree of all the nodes is even. Basically, we want to remove optional edges from the graph such that all degrees become even.
 
 So we can restrict the graph to optional edges, and divide the nodes into two groups: unhappy and happy. Unhappy nodes are nodes such that the degree of this node (when restricted to optional edges) is not equal to the degree (when restricted to mandatory edges); i.e. the degree (with all edges) is odd. A node is happy if the total degree is even, or alternatively if the two restrictions produce the same degree.
 
 ### Solution Part 2 (harder part)
-
 Then we can make some key observations: if you remove an edge between two unhappy nodes, they both become happy. If you remove an edge between an unhappy and happy node, they swap states. If you remove two edges from a node, its state does not change. Thus, if two unhappy nodes are connected by a chain of happy nodes, you can remove all edges along that chain to make the two nodes happy. This leads us to another conclusion: if there are an odd number of unhappy nodes, then there is no solution; otherwise, there is always a solution. This is because we can divide the $2K$ unhappy nodes into $K$ pairs such that there are $K$ disjoint paths (sharing no edges), each satisfying a pair of unhappy nodes. If two pairs $(A,C)$ and $(B,D)$ share a common edge on their paths then we can simply rearrange the pairs to $(A,B)$ and $(C,D)$ (or $(A,D),(B,C)$ depending on the structure of the graph).
 
 There is no solution if there are an odd number of unhappy nodes because you cannot divide them into pairs. The only side case is if there are an odd number of odd parity nodes (when restricted to optional edges) trying to become even (because you can remove all edges), but intuitively this configuration is impossible.
 
 ### Solution Part 3 (hardest part)
-
 Although we know that we can always partition an even number of unhappy nodes into pairs, we still must explicitly find one.
 
 Now the above mentions that if two paths cross we can separate them. Same goes for a cycle; if multiple paths form a cycle then we can rearrange the pairs such that this doesn't happen.
