--- a/codeforces/contests/2035/2035.md
+++ b/codeforces/contests/2035/2035.md
@@ -5,6 +5,8 @@ This is fun; I had two failed solutions, looked at the editorial, and then came 
 
 Assume that when we beat the boss, the final weapon has been upgraded $a$ times. The greedy strategy would obviously be to first repeatedly upgrade until $a$ damage (upgrade in blocks of $k$; hit the monster once after every $k$ upgrades), then repeatedly hit until the monster dies (the amount of times you hit after upgrading is $b$). $a$ and $b$ are inversely related, so as we increase $a$, the minimum $b$ decreases (and vice versa). If we fix $a$ then it's optimal to minimize $b$ as this minimizes the cost.
 
-After fixing $a$, we can calculate the minimum $b$ with $O(1)$ math simulation. If we fix $b$, then calculate the minimum $a$ through binary search. We actually don't have to brute-force all $a$ or $b$; because $a$ and $b$ are inversely related, only brute force $a$ for $a\le{b}$ and vice versa. Basically, continue up to $a=b$. This is all assuming the worst case $k=z$, in which case you don't deal any side damage to the monster when upgrading the weapon. So in this case, all $z$ damage must come from the $b$ hits (which forces each hit to have $z/a$ damage). $z/a$ may not be integer, so it's possible $ab\ge{z}$, so modify the bounds as $z\le{ab}\le(\lceil{\sqrt{z}}\rceil)^2$. Therefore, $\sqrt{z}\le{a}\le{\lceil{\sqrt{z}}\rceil}$, so just independently brute force all $a$ and $b$ up to $\lceil{\sqrt{z}}\rceil$. The time complexity is $O(\sqrt{Z}logZ)$.
+After fixing $a$, we can calculate the minimum $b$ with $O(1)$ math simulation. If we fix $b$, then calculate the minimum $a$ through binary search. We actually don't have to brute-force all $a$ or $b$; because $a$ and $b$ are inversely related, only brute force $a$ for $a\le{b}$ and vice versa. Basically, continue up to $a=b$.
+
+I will assume the worst case $k=z$, in which case you don't deal any side damage to the monster when upgrading the weapon. So in this case, all $z$ damage must come from the $b$ hits. This forces $ab\ge{z}$ as a lower bound. As the upper bound, $ab$ must be less than the first square that is $\ge{z}$, so $z\le{ab}\le(\lceil{\sqrt{z}}\rceil)^2$. This is because it's never optimal for $a,b>\lceil\sqrt{z}\rceil$ because it's always possible to further reduce $a$ or $b$ while still maintaining $ab\ge{z}$.  Therefore, ${a,b}\le{\lceil{\sqrt{z}}\rceil}$, so just independently brute force all $a$ and $b$ up to $\lceil{\sqrt{z}}\rceil$. The time complexity is $O(\sqrt{Z}logZ)$.
 
 Also, my failed solutions were ternary searching on the min-cost function for a fixed $a$ (but it actually isn't unimodal, although it's been done by others [with some cheese](https://codeforces.com/blog/entry/135892)), and a repeated binary search to find all unique $b$ values from highest to lowest. I do that by repeatedly searching for the minimum $a$ that produces a new unique $b$. That works conceptually, but it timed out (although if some stuff were optimized, I'm confident it would work). Here is [the submission](https://codeforces.com/contest/2035/submission/295354012).
