--- a/codeforces/contests/2051/2051.md
+++ b/codeforces/contests/2051/2051.md
@@ -33,10 +33,10 @@ If $l\le{a_i}\le{r}$ then the card we pick may be the joker, so we need to add o
 It's clear that we have at most $3$ ranges, one prefix range, one middle range, and one suffix range, which are easy to maintain. Idk an easy way to calculate the union so I did it pretty brute-force. $O(Q)$ time complexity as well.
 
 ## G. Snakes (estimate: 2100)
-The right bound of $10^9$ is completely trivial because an optimal placement of the snakes won't even get close to it. Also, add a snake $s_N$ at the very right of all the other snakes, that effectively serves as a right bound. We can say that it's optimal for the earliest snake to be placed at cell $1$, so the cost of some permutation of snakes, when the permutation is placed optimally, is equal to the position of $s_N$ minus $1$. Our goal is to minimize the position of $s_N$ by finding the optimal permutation.
+The right bound of $10^9$ is completely trivial because an optimal placement of the snakes won't even get close to it. Also, add a snake $s_{N+1}$ at the very right of all the other snakes, that effectively serves as a right bound because it's never updated in a query. We can say that it's optimal for the earliest snake to be placed at cell $1$, so the cost of some permutation of snakes, when the permutation is placed optimally, is equal to the position of $s_N$ minus $1$. Our goal is to minimize the position of $s_{N+1}$ by finding the optimal permutation.
 
-Calculate an array $cost[i][j]$ denoting the minimum distance required between the starting positions of snakes $i$ and $j$ such that they won't collide after all queries. This can be done in $O(N^2Q)$ or $O(NQ)$ with simulation and 2p. I initially wanted to take the cost array and run the Hungarian algorithm on it, but can't seem to get that to work although I'm pretty sure it's a valid solution.
+Calculate an array $cost[i][j]$ denoting the minimum distance required between the starting positions of snakes $i$ and $j$ such that they won't collide in any query. This can be done in $O(N^2Q)$ or $O(NQ)$ with simulation and 2p. (I initially wanted to take the cost array and run the Hungarian algorithm on it, but that doesn't work because disjoint cycles may form).
 
-Doing bitmask dp is simpler, letting $dp[mask][last]$ being the minimum position of $s_{last}$, given that we have placed all snakes in $mask$ and the last snake placed is $last$. Using the $cost$ array, we can pretty easily do this in $O(2^NN^2)$. At the end, return $dp[2^N-1][N]-1$.
+Doing bitmask dp is simpler, letting $dp[mask][last]$ being the minimum position of $s_{last}$, given that we have placed all snakes in $mask$ and the last snake placed is $last$. Using the $cost$ array, we can pretty easily do this in $O(2^NN^2)$. At the end, return $dp[2^{N+1}-1][N+1]-1$.
 
 Time complexity: $O(NQ+2^NN^2)$.
