--- a/codeforces/contests/2039/2039.md
+++ b/codeforces/contests/2039/2039.md
@@ -2,3 +2,20 @@
 
 ## B. Shohag Loves Strings
 If there are two adjacent equal characters, then the amount of distinct substrings is $2$ so it's ok. If there's three adjacent distinct characters, then the amount in this substring is $6$ so it's also ok. Otherwise, the string must consist of two distinct alternating characters (or be of length $1$, in which case it's clear that it doesn't work). For any substring (length $n$) of these strings, the amount of unique substrings is $2n-1$ because there are $2$ unique substrings for each length up to $n$, except for length $n$ where there's only $1$ unique substring. Therefore, for these cases there is no solution. Checking these conditions takes $O(|S|)$.
+
+## E. Shohag Loves Inversions
+Aside from the case $00\dots{01}$, then the number we add to the array (the number of inversions) will be the maximum of the new array. This means we can place it in whatever location we want, and therefore have freedom to specify how many new inversions we want.
+
+Second, given two different arrays of length $i$, it's impossible to get the same array of length $i+1$ by performing the operation on the two arrays. This means that we can calculate the answer for $i+1$ by going through each array of length $i$, and adding the amount of positions where the new element can be placed for each array. Note that sometimes, placing the element in different positions in the same array will produce the same array of length $i+1$.
+
+Assume an array of length $i$. If the maximum $M$ is greater than to the number of inversions $K$, then we can place the next element in $i+1$ positions, each producing a different array of length $i+1$. Otherwise, if $M=K$, then let the number of instances of $M$ in the array be $C$. All $C$ instances of $M$ must make up a suffix of the array (unless in one special case $000\dots{10}$), so we have $i-C+1$ positions to add the next element to. If $M<K$, then the only case is $000\dots{1}$.
+
+Let $dp[i]$ be the amount of unique arrays of length $i$ such that $M>K$. For each $dp[j]$ satisfying $2\le{j}<i$, we can append the number of inversions in each array $i-1-j$ times, so that the number of inversions doesn't change (and thus $M=K$). $C=i-1-j$, so on the $ith$ operation, we have $(i-1)-C$ positions to add the new element such that $M>K$ after this change. As from above, there are actually $(i-1)-C+1$ unique arrays that we can achieve, but to satisfy $M>K$ we can't place the element in the suffix of the array, so as a result there are only $(i-1)-C=j$ that we consider. All this simplifies to the sum of $dp[j]*j$ for $j\ge{2}$.
+
+Back to that special case. There exists exactly one array of the form $000\dots{10}$ of length $j$ for each $j\ge{3}$. What makes it special is that $M=K$ but that all copies of $M$ don't make up a suffix of the array. However, the predictable form of these special arrays means that we can apply the same logic as above. For all $j\ge{3}$, we add a suffix of $1$'s until the length is $i-1$, then we have $j-1$ positions to place the next element to satisfy $M>K$. So we also add $(2+3+\cdots+(i-2))$ to $dp[i]$. Summarizing, $dp[i]=\sum_{j=3}^{i-1} ((dp[j]\cdot{j})+(j-1))$.
+
+Let $ans[i]$ be the amount of arrays of length $i$, regardless if $M>K$ or not. We get here by adding $dp[i]$ to the amount of arrays of length $i$ satisfying $M\le{K}$.
+
+For $M<K$, we have already covered that there's only $1$ case $000\dots{1}$. If $M=K$, then we can go through all $dp[j]$ satisfying $3\le{j}<i$, and instead of appending the number of inversions to each array $i-1-j$ times, we just append it $i-j$ times. This ensures $M=K$ and the final array is of length $i$. Also consider the special case of $000\dots{10}$, for which after appending we get $000\dots{1011}\dots{1}$; we add $i-2$ to $ans[i]$. So, $ans[i]=dp[i]+(\sum_{j=3}^{i-1}dp[j])+(i-2)+1 = (\sum_{j=3}^{i}dp_i)+(i-1)$.
+
+Calculating the $ans$ array basically precalculates all queries, so we can answer each query in $O(1)$ now. Across all test cases, the time complexity is $O(\max{N}+T)$.
