--- a/codeforces/contests/1986/1986.md
+++ b/codeforces/contests/1986/1986.md
@@ -8,9 +8,22 @@ Initially I came up with a complicated spanning tree (Kruskal's, to find one edg
 But we can instead use Tarjan's existing [bridge-finding algorithm](https://codeforces.com/blog/entry/71146).
 The second part is done in the same way as before.
 
-## G. Permutation Problem (Simple Version)
+## G1. Permutation Problem (Simple Version)
 Pretty happy I solved this one by myself considering that I was stuck for 20 min before everything started coming together. 
 
 I'll instead refer to the permutation as $a_i$. Write each $a_i$ in the form ${p_i\over{q_i}}$. $p_i={a_i\over{gcd(a_i,i)}}$ and $q_i={i\over{gcd(a_i,i)}}$. Having gotten rid of the common factors, we can now say that a pair $(i,j)$ is formed if $p_i$ divides $q_j$, and $p_j$ divides $q_i$. 
 
-So store a map $f[d][p]$ which is the amount of $p_i\over{q_i}$ such that $d$ divides $p_i$ and $p=q_i$. So for each $p_i$, you can quickly search up all $q_j$ such that $q_i$ divides $p_j$. To ensure that $q_j$ divides $p_i$, go through all of $p_i$'s divisors $d_i$ and add $f[q_i][d_i]$ to the answer; this is the amount of pairs that are formed with this $i$. Then we must update $f$, so loop through all the divisors again and increment $f[d_i][q_i]$ by $1$. Because we loop through divisors each time, the runtime is about $O(N\sqrt{N})$.
+So store a map $f[d][q]$ which is the amount of $i$ such that $d$ is a divisor of $p_i$, and $q=q_i$. So for each $p_i$, you can quickly search up all $q_j$ such that $q_i$ divides $p_j$ (this is just $f[q_i][x]$). To ensure that $q_j$ divides $p_i$, go through all of $p_i$'s divisors $d_i$ and add $f[q_i][d_i]$ to the answer; this is the amount of pairs that are formed with this $i$. Then we must update $f$, so loop through all the divisors again and increment $f[d_i][q_i]$ by $1$. 
+
+Because we loop through divisors each time, the runtime is about $O(N\sqrt{N}logN)$, or $O(Nlog^2N)$ if divisors are precalculated. The extra $logN$ factor comes from the use of a map.
+
+## G2. Permutation Problem (Hard Version)
+The above solution MLEs on this because of the map, and there's no solution that I could see to fix it. So, here's a brand new solution, that builds on some of the ideas above, but reduces the overall memory by a lot.
+
+The goal is to iterate over all values of $q$ and find the set of all $j$ such that $q$ divides $p_j$. For all $p_i$ satisfying $q_i=q$, we have narrowed down the search space for all those $p_i$ to all $j$. For each $p_i$, the amount of pairs equals the amount of $j$ such that $q_j$ divides $p_i$.
+
+This can be found by going through all $j$ and storing the $q_j$ in a frequency array $f[q_j]$ (btw a map will TLE). Then we can iterate over all divisors $d$ of each $p_i$ and add $f[d]$ to the answer, because those many indices can be paired with index $i$.
+
+There is potential that our algorithm tries to pair an index with itself, but this is easily resolved because it only happens when $p_i=q_i=1$.
+
+Complexity: $O(NlogN)$.
