--- a/olympiads/baltic/2009/day_1/2009.md
+++ b/olympiads/baltic/2009/day_1/2009.md
@@ -7,6 +7,17 @@ The beetle eats a continuous range of water droplets. The equation to calculate 
 
 I'll now present a slow dp that we will optimize. Let $L[l][r][m]$ be the minimum sum of $t_i$ we can achieve for the range $[x_l,x_r]$ assuming the time we reach the last droplet is $m$, and the last droplet we reach is $x_l$ (hence the name of the dp array being $L$. So also make a corresponding $R$ dp array). It should be pretty easy to update this by transitioning from $L[l][r][m]$ to $L[l-1][r][m'_1]$ and $R[l][r+1][m'_2]$, and same for the $R$ array. However, it times out because of the $m$ dimension in the dp array.
 
-Now we optimize by taking advantage of the function corresponding to the sum of $t_i$. Sorting by $t_i$ (i.e. order we eat the droplets), let $d_i=t_{i+1}-t_i$. The sum will then equal to $(D-1)d_i+(D-2)d_{i+1}+\dots+d_{D-1}$. It's easy to see that if we go in reverse, then calculating the $t_i$ sum is possible without having the extra $m$ dimension. Just add the first $d$ value once, the second $d$ value twice, etc. Also, because we are going in reverse, instead of $L[l][r][m]$ representing the beetle having eaten the range $[x_l,x_r]$, it will now represent the beetle eating only from/being restricted to that range in the future (we set it aside for later). Note that going in reverse means that each dp state will no longer implicitly store how many drops we've eaten, so we need to add a dimension $k$ to our dp arrays storing this information.
+Now we optimize by taking advantage of the function corresponding to the sum of $t_i$. Sorting by $t_i$ (i.e. order we eat the droplets), let $d_i=t_{i+1}-t_i$. The sum will then equal to $(D-1)d_i+(D-2)d_{i+1}+\dots+d_{D-1}$. It's easy to see that if we go in reverse, then calculating the $t_i$ sum is possible without having the extra $m$ dimension. Just add the first $d$ value once, the second $d$ value twice, etc.
 
-With this, let $L[l][r][k]$ be the minimum $t$ sum assuming we start at drop $l$, eat $k$ drops, and can't eat anything in the range $[x_l,x_r]$ because we set it aside for the future (aside from $x_l$ because we start here). The next drop is either $l-1$ or $r+1$, so we transition from $L[l-1][r][k-1]$ and $R[l][r+1][k-1]$. For base cases, $L[l][r][1]=R[l][r][1]=0$ for all pairs $(l,r)$. To calculate the answer, we simply look at each value $L[z][z][k]$ where $x_z=0$ and $k$ is anything. The time complexity is $O(N^3)$.
+With this strategy of going in reverse, let $L[l][r][k]$ be the minimum $t$ sum assuming we started at drop $l$ and then ate $k$ new drops, none of which are in the range $(x_l,x_r]$. We basically assume that we <b>started</b> at drop $l$ having already eaten all the droplets in that range. If it's unclear why, then just try completely reversing the ideas of the first dp.
+
+We transition to $L[l][r][k]$ and $R[l][r][k]$ from $L[l-1][r][k-1]$ and $R[l][r+1][k-1]$. For base cases, $L[l][r][1]=R[l][r][1]=0$ for all pairs $(l,r)$. To calculate the answer, we simply look at each value $L[z][z][k]$ where $x_z=0$ and $k$ is anything. The time complexity is $O(N^3)$.
+
+## 2. Candy Machine
+See the Gold problem [Apple Catching](https://usaco.org/index.php?page=viewproblem2&cpid=1233).
+
+Using similar ideas, we transpose each coordinate $(s_i,p_i)$ to $(s_i+p_i,p_i-s_i)$ (henceforth referred to as $(x_i,y_i)$), and say that a wagon assigned to candy $i$ can catch candy $j$ if $x_i\le{x_j}$ and $y_i\le{y_j}$.
+
+Store all $y$ values in an array, and sort these $y$ values by the corresponding $x$ value. Formally, for any for two indices in the array $i$ and $j$ ($i<j$), $x_i\le{x_j}$ must be satisfied. 
+
+This takes care of the $x$ constraint. We now see that the number of wagons comes from the minimum amount of non-decreasing subsequences needed to cover the whole array. We can find this value, and also construct a valid delegation of candies to wagons, by using the obvious greedy strategy. Time complexity is $O(NlogN)$.
