--- a/olympiads/central_european/2018/ceoi_2018.md
+++ b/olympiads/central_european/2018/ceoi_2018.md
@@ -1,5 +1,12 @@
 # CEOI 2018 Day 1
 
+## 1. Cloud Computing
+Process by decreasing frequency, which basically eliminates the need to consider for it. We're left with two values: the amount of cores gained and money spent.
+
+For a computer, it can be viewed as gaining a positive amount of cores and a negative amount of profit. For a customer, it can be viewed as a negative amount of cores and positive amount of profit. So we really don't have to distinguish between computers and customers; they modify the same variables in the same way.
+
+So do a knapsack where $dp[i][c]$ represents the maximum profit achievable given that we have considered the first $i$ computer+customers, and have $c$ cores left. Asymptotically, it shouldn't pass, but the low constant factor of dp is enough to pass within the time constraint. Time complexity is technically $O(MCN)$.
+
 ## 2. Global Warming
 If $d$ is positive, the the interval is optimally a suffix of the array. If $d$ is negative, then the interval is optimally a prefix of the array. Decreasing a prefix has the same relative effect as increasing the complementary suffix, so we only need to consider positive $d$. Also, the only value of $d$ we need to consider is $d=x$.
 
