must grind atcoder

--- a/atcoder/abc171/abc171.md
+++ b/atcoder/abc171/abc171.md
@@ -1,9 +1,16 @@
 # AtCoder Beginner Contest 171
 
 ## F. Strivore
-
 Rephrase this problem to finding the number of strings with length $|S|+K$ that contain $S$ as a subsequence. For simplicity denote $|S|$ as $N$.
 
+Assume that we have selected locations for all characters in $S$ in the final string. Let the position of $S_i$ in the string be $P_i$. We can avoid double counting strings by satisfying the following rule: for each $i$, there must exist no other occurence of $S_i$ between $P_i$ and $P_{i+1}$. So fix $P_1$ and we get the following formula: all letters before $P_1$ are unrestricted so there are $26^{P_1-1}$ possibilities. We place the remaining $N-1$ letters in $N-P_1$ total possibilities, so multiply by ${N+K-P_1}\choose{N-1}$. All other $N+K-P_1-(N-1)$ letters have $25$ possibilities for them.
+
+Basically, the formula for fixing some $P_1$ is $26^{P_1-1}\cdot{{N+K-P_1}\choose{N-1}}\cdot{25^{K-P_1+1}}$. We sum this value up over all $1\le{P_1}\le{K+1}$, to get a time complexity of either $O(|S|+K)$ or $O((|S|+K)log(|S|+K))$ depending on if exponents are precalculated or not.
+
+I rewrote this (because I wanted to resolve the problem completely by myself).
+
+
+## THIS IS OLD TEXT
 Assume you have selected locations for all characters in $S$ in the final string, then let's fix $S_N$ and calculate. Take $S_1$ for example, if there are copies of $S_1$ between itself and $S_2$ then you can just shift $S_1$ to it's copy (i.e. you will double count strings). So to avoid this, assume $S_1$ is the last copy of itself (so avoid having another $S_1$ between itself and $S_2$). With this logic you avoid double counting all strings. So there are $26^B * {{i-1}\choose{n-1}} * 25^O$ where $B$ is the amount of characters before $S_1$ and $O$ is for all other characters.
 	
 But, you aren't fixing $S_1$ so you don't consistently know the value of $B$. So, we can instead fix $S_1$ but still run the same algorithm. This works for the same logic as in the above paragraph. $O(|S|+K)$ with precalculation of exponents, but mine runs in $O((|S|+K)log(|S|+K))$.
