--- a/codeforces/contests/1108/1108.md
+++ b/codeforces/contests/1108/1108.md
@@ -1,5 +1,17 @@
 # CF Round 535 (#1108)
 
+## E1. Array and Segments (Easy version)
+Assuming the maximum in $b$ is at index $i$, then no segments that we use should cover $i$. If so then we can just greedily delete that segment.
+
+So fix each element as the maximum and use difference arrays to quickly process all segments that don't intersect $i$. Then just take the minimum of the new array and subtract it from $a_i$ to get a candidate for the answer. Take the maximum across all candidates.
+
+Time complexity is $O(N(N+M))$.
+
+## E2. Array and Segments (Hard version)
+We improve finding the minimum for each maximum $i$. It can be split into two parts: the minimum to the left of $i$ and finding the minimum to the right of $i$, because no segment can cover $i$. 
+
+$L_i$ is equal to the minimum value in the range $[1,i-1]$ after processing all segments $j$ such that $[l_j,r_j]\subseteq[1,i-1]$. We can find these values recursively. Given $L_{i}$ and the array after adding all segments in the range $[1,i-1]$, then, we can find $L_{i+1}$ by adding all segments ending at $i$ to $b$ and updating the minimum. Repeat to find the minimum element to the right of $i$, and then we can compute the answer as $\max_{1\le{i}\le{N}}(a_i-\min(L_i,R_i))$. The time complexity is reduced to $O(NM)$.
+
 ## F. MST Unification
 All MSTs have exactly the same edge weights (proof by contradiction).
 
