--- a/codeforces/contests/2002/2002.md
+++ b/codeforces/contests/2002/2002.md
@@ -1,4 +1,12 @@
 # epic something (#2002)
 
+## D1. DFS Checker (Easy Version)
+A node is consider <i>valid</i> if both of its children are in their correct locations in $p$. Let the position of $i$ in $p$ be $pos_i$, and the subtree size of $i$ be $sz_i$. Formally, node $i$ is valid if node $pos_{2i}=pos_i+sz_i+1$ and node $pos_{2i+1}=pos+i+1$ (or the other way around). When we swap two children, we update their validity and their parents' validity. If the number of valid nodes is equal to $N$, then it constitutes a valid DFS order. $O(N)$ time complexity.
+
+## D2. DFS Checker (Hard Version)
+We need to improve the update function. We generalize validity in terms of the following. Node $i$ is valid if for all children $c$ of $i$, sorted by position, $pos_{c[j]}=pos_{c[j-1]}+sz_{c[j-1]}$. When changing the position of a node we only need to consider the children adjacent to it, and can thus process updates in $O(logN)$, for a total time complexity of $O((N+Q)logN)$. 
+
+This is very tedious to implement so I would check out a better generalization in the official editorial (all children $c$ must satisfy $[pos_c,pos_c+sz_c-1]\subseteq{[pos_i,pos_i+sz_i-1]}$, i.e time in/time out for children is within time in/time out for $i$).
+
 ## E. Cosmic Rays
 Build the solution one block at a time. When processing block $i$, let the time until it disappears be $t_i$. Initially, it's set to $a_i$. $t_i$ will obviously increase if we find a suitable block of the same $b$ to merge this one into. So while this block can outlast blocks before it or merge into another block of the same $b$, we will process these operations and update $t_i$ as necessary. Once no more operations are possible, then we stop. All these can be maintained with a stack; time complexity is $O(N)$.
