--- a/codeforces/contests/2065/2065.md
+++ b/codeforces/contests/2065/2065.md
@@ -1,5 +1,10 @@
 # Codeforces Round 1004 (#2065)
 
+## F. Skibidus and Slay
+A path is a good path for $i$ if $i$ is the majority. WLOG assume $i=1$. If some path is a good path, then there always exists a good subarray of that path of the form $[1,x,1]$ or $[1,1]$ for any other integer $x$. So we only need to consider groups of three adjacent vertices, which is done with a simple dfs in $O(N)$.
+
+Some intuition on why the path is always reducible comes from a dp. Transform all occurences of $i$ to have weight $1$ and all others to have weight $-1$, then do a dfs in the tree; if there exists a path between two occurences of $i$ with a positive sum of vertices, then $i$ is the majority. As for transitions, it's clear that at any point we can increase the length of an existing path/start a new path, or end a path if the vertex sum is positive. If the vertex sum for a path ending at some node $j$ ($a_j=i$) is $\le{0}$, then that path is useless and we can discard it. So we can say for our dp that any good path must contain exactly two occurences of $i$ (at its endpoints), which means that the path is either $[i,x,i]$ or $[i,i]$.
+
 ## G. Skibidus and Capping
 $lcm(a,b)={ab\over{gcd(a,b)}}$. So decompose $a$ and $b$ into their prime factors. $lcm(a,b)$ must have exactly two prime factors, so we can just run casework.
  - If for a pair $(i,j)$, $a_i=a_j$ and $a_i$ is semiprime, then $(i,j)$ is valid.
