--- a/codeforces/contests/2065/2065.md
+++ b/codeforces/contests/2065/2065.md
@@ -1,5 +1,35 @@
 # Codeforces Round 1004 (#2065)
 
+## A. Skibidus and Amog'u
+Delete the last two characters from the string, and add "i" to the end. That is the new string.
+
+Time complexity: $O(|W|)$.
+
+## B. Skibidus and Ohio
+If we can make just one operation in the initial string, then we can reduce the string to have size $1$. Set the remaining character to match with either the character to the left or the right, and continue deleting until the string has size $1$. If no deletions are possible from the beginning, then the answer is just $|S|$. It runs in $O(|S|)$ as well.
+
+## C1. Skibidus and Fanum Tax (easy version)
+For the easy version, dp is suitable, but we can also see that the following strategy works:
+ - For $a_1$, always use the operation if it decreases the value of $a_1$.
+ - For $a_i$ ($2\le{i}\le{N})$, always use the operation if it is a better candidate for $a_i$. Formally, if $a_i\ge{a_{i-1}}$, use the operation if it decreases $a_i$ but still satifies $a_i\ge{a_{i-1}}$. And if $a_i<a_{i-1}$, then use the operation if it makes $a_i\ge{a_{i-1}}$.
+
+At the very end, we check if the final array is non-decreasing and return it. This runs in $O(NM)$.
+
+## C2. Skibidus and Fanum Tax (hard version)
+The strategy from above is still valid. We want to find the best candidate of $b_j$ as to satisfy $b_j-a_i\ge{a_{i-1}}$, but also to minimize $b_j-a_i$ so there is more freedom for future elements. So, rearranging the equation, the best candidate for $b_j$ is the smallest value of $b_j$ that is $\ge{a_i+a_{i-1}}$. Sort all $b$ and binary search.
+
+The time complexity now becomes $O(NlogM)$.
+
+## D. Skibidus and Sigma
+For an array $b$ of length $M$, the score is more easily rephrased as $\sum_{i=1}^M(i\cdot{b_i})$. Let this score be $C_b$.
+
+Let $S_i$ be the sum of array $i$. If array $i$ is in position $j$ in the final permutation, then the score for $i$ is $C_i+S_i(N-j+1)$. Only the $S_i$ is variable, so we can drop the $C_i$ terms. Then we can see that to maximize the score, we should put arrays with higher $S_i$ earlier in the permutation. So after calculating sums, sorting them, then following through with the above formula, we get the maximum sum in $O(NMlogN)$.
+
+## E. Skibidus and Rizz
+WLOG assume $N\ge{M}$. The optimal string is a block of $K$ zeroes (to satisfy the condition), followed by alternating ones and zeros (so the count of zeroes and ones increases at the same rate, meaning the difference won't change), and finally a block of the excess ones at the end.
+
+If $N-K>M$, then we'll run out of zeroes to alternate with ones. If $K>N$, then we can't even build the initial block. These are the only two fail cases, and otherwise we follow the above procedure to get the answer, in $O(N+M)$.
+
 ## F. Skibidus and Slay
 A path is a good path for $i$ if $i$ is the majority. WLOG assume $i=1$. If some path is a good path, then there always exists a good subarray of that path of the form $[1,x,1]$ or $[1,1]$ for any other integer $x$. So we only need to consider groups of three adjacent vertices, which is done with a simple dfs in $O(N)$.
 
@@ -23,4 +53,6 @@ For queries, assume WLOG that the index being updated, $i$, satisfies $s_i=0$. F
 Next, for $j>i$ and $s_j\ne{s_i}$, after we invert $s_i$ then $s_j$ can no longer pair with it. So for all these indices, we subtract $2^{n-j}\cdot{2^{i-1}}$ from the answer. Same goes for indices $j$ satisfying $s_j=s_i$; we'll add $2^{n-j}\cdot{2^{i-1}}$ to the answer. Maintaining two more suffix sum Fenwick trees to find the sum of all $2^{n-j}$ is very helpful for this, and so the time complexity ends up being $O((N+Q)logN)$.
 
 ## Comments:
-Off day today, but at least got some practice doing a mock contest. I basically sit down and time myself, and don't leave the area (usually I would solve problems by looking at them and thinking about them while doing other stuff).
+Off day today, but at least got some practice doing a mock contest. I basically sit down and time myself, and don't leave the area (usually I would solve problems by looking at them and thinking about them while doing other stuff). (this refers to problems G and H)
+
+Imo best problem is problem F, worst problem is problem G
