--- a/codeforces/contests/2035/2035.md
+++ b/codeforces/contests/2035/2035.md
@@ -10,3 +10,15 @@ After fixing $a$, we can calculate the minimum $b$ with $O(1)$ math simulation. 
 I will assume the worst case $k=z$, in which case you don't deal any side damage to the monster when upgrading the weapon. So in this case, all $z$ damage must come from the $b$ hits. This forces $ab\ge{z}$ as a lower bound. As the upper bound, $ab$ must be less than the first square that is $\ge{z}$, so $z\le{ab}\le(\lceil{\sqrt{z}}\rceil)^2$. This is because it's never optimal for $a,b>\lceil\sqrt{z}\rceil$ because it's always possible to further reduce $a$ or $b$ while still maintaining $ab\ge{z}$.  Therefore, ${a,b}\le{\lceil{\sqrt{z}}\rceil}$, so just independently brute force all $a$ and $b$ up to $\lceil{\sqrt{z}}\rceil$. The time complexity is $O(\sqrt{Z}logZ)$.
 
 Also, my failed solutions were ternary searching on the min-cost function for a fixed $a$ (but it actually isn't unimodal, although it's been done by others [with some cheese](https://codeforces.com/blog/entry/135892)), and a repeated binary search to find all unique $b$ values from highest to lowest. I do that by repeatedly searching for the minimum $a$ that produces a new unique $b$. That works conceptually, but it timed out (although if some stuff were optimized, I'm confident it would work). Here is [the submission](https://codeforces.com/contest/2035/submission/295354012).
+
+## F. Tree Operations
+If $p$ operations works, then $p+2N$ works by decrementing and incrementing each node by one. So fix $p\pmod{2N}$ (denoted $b$), and binary search on the earliest $M$ such that $2N\cdot{M}+b$ works. Take the minimum out of all these answers.
+
+We need a check function. Given the amount of operations, we can figure out how many operations are applied to each node $i$. Let that be $cnt_i$. We can translate the operations into redistributing $cnt_i$ into the subtree of $i$; the resulting $cnt$ values tell how many times each node is decremented/incremented.
+
+It works if after redistribution, for each $i$, $cnt_i\ge{a_i}$ and $cnt_i-a_i$ is even. So we can just do dp from the leaves up. For all children $j$ of $i$, we first distribute $cnt_i$ to $cnt_j$ if $cnt_j<a_j$, as to satisfy the first condition. After this, for all $j$, if $cnt_j-a_j$ is odd, then we transfer one operation to $cnt_j$ from $cnt_i$ as to make the difference even. At the end, check the root satisfies the above conditions.
+
+This runs in $O(N^2logA)$. The time limit is pretty tight, but it can be sped up with:
+ 1) only check values of $2N\cdot{M}+b$ that are the same parity as $\sum{a_i}$.
+ 2) implement iterative dfs instead of recursive
+ 3) heuristic optimization, but modify the initial upper bound of each binary search as to make sure that all values checked are strictly less than the current answer.
