--- a/usaco/contests/gold/2025/jan/2025_jan.md
+++ b/usaco/contests/gold/2025/jan/2025_jan.md
@@ -12,3 +12,15 @@ Since we have gotten rid of $s_i=1$, then we only process nodes satisfying $s_i=
 We are forgetting some adjacent nodes however, specifically the ones that were made adjacent to this node through the deletion of a node $j$ satisfying $s_j=1$. All these nodes must have been adjacent to $i$ in $G$. So now, we can also unite this node with all adjacent nodes $j$ in $G$, such that $s_j=1$ and $j<i$ (doesn't exist yet). This is the reason that we store all the nodes that don't exist, because they are helpful in finding the other adjacent nodes.
 
 Time complexity is $O(M\alpha(N))$.
+
+## 3. Photo Op
+Consider the set of all $x_i$ currently posing. The shortest distance is constructed by the following procedure:
+ - We go to $x_i$ in one segment and then some point on the y-axis in the second segment. Then we go along the y-axis to reach $Y$ for the third segment.
+
+ mention the small side cases
+
+For all $x_i<X$, we can assume that we traverse along the left of segment $i$ from $x_i$ to the y-axis (so traverse between segments $i$ and $i-1$), while for $x_i>X$, we can assume that we traverse along the right of segment $i$ (between $i$ and $i+1$).
+
+We maintain the shortest distance to $Y$ through each $x_i$, and retrieve the minimum with a multiset. For some fixed $x_i$, the range of points on the y-axis that we might go to for our second segment is bounded by the maximum y-coordinate $y_j$ of a segment $x_j<x_i$, and the minimum y-coordinate $y_j$ of a segment $x_j>x_i$. Retrieve these with a segment tree after coordinate compression (there are alternate methods, but a segtree is the most implementation-friendly imo). If the range is empty then no second segment can be built, and we don't have to process this $x_i$ anymore. Otherwise, it's pretty clear that our second segment is from $x_i$ to one of the endpoints of the y-range, and we can update the distance multiset easily.
+
+Therefore, we have a solution in $O(NlogN)$. When creating a new segment, update all y-ranges that it interferes with. These indices form a range. It's clear that for all indices contained inside the range that are not the endpoints, their y-ranges become nonempty and we can delete them. This means that out all indices of the range, we keep exactly two (the endpoints) for future consideration and remove the rest. Thus, the runtime is $O(NlogN)$.
