--- a/codeforces/contests/2063/2063.md
+++ b/codeforces/contests/2063/2063.md
@@ -1,5 +1,12 @@
 # Codeforces Round 1000 (#2063)
 
+## D. Game With Triangles
+Refer to the bases of the triangle as the two points collinear to each other by a horizontal line. The area of the triangle is the distance between the bases. Also, sort $a$ and $b$.
+
+If we want to make $x$ triangles in $a$, then we pair up the first and last, the second first and second last, etc up until $x$. The third points are just $x$ arbitrary points in set $b$. Using this, we can figure out the optimal score for $x$ triangles in $a$ and $y$ triangles in $b$.
+
+For each $k$, we can construct bounds on $x$ and ternary search on the $(x,y=k-x)$ pair producing the maximum area. Checks can be done in $O(1)$ after precalculation. So, $O(NlogN+MlogM)$.
+
 ## E. Triangle Tree
 Let $a=dist(u,lca(u,v))$ and $b=dist(v,lca(u,v))$. $x$ lies in the range $(|a-b|,a+b)$, so the amount of possible values for $x$ is $(a+b-1)-(max(a,b)-min(a,b)+1)+1$, which simplifies to $2\cdot{min(a,b)}-1$ (if $a<b$ then it's $(a+b-1)-(b-a+1)+1=2a-1$, and vice versa).
 
