--- a/olympiads/croatian/coi/2016/coi_2016.md
+++ b/olympiads/croatian/coi/2016/coi_2016.md
@@ -1,6 +1,6 @@
 # COI 2016
 
-## 3. Palinilap
+## 2. Palinilap
 A palindrome is either centered at a single index or at two adjacent indices. We first calculate all palindromes in the original string. This is done by fixing a center and then finding the longest palindrome with binary search and string hashing.
 
 If we change a character, then we break all palindromes that it's a part of, except for palindromes centered <b>solely</b> at this index. So we can first use difference arrays to calculate the amount of these palindromes that each index is a part of.
@@ -8,3 +8,20 @@ If we change a character, then we break all palindromes that it's a part of, exc
 Next, we want to calculate the amount of palindromes gained by changing each index to each letter. After this, we can just try all possible changes to easily get the answer.
 
 We find the above while calculating the initial amount of palindromes. We permit ourselves to one mismatch when finding the longest palindrome, because we assume that the operation will be spent on changing one of the mismatched characters to the other. Thus, we get an answer for the amount of new palindromes formed by changing each index to each letter, and can now solve the problem. The time complexity, due to the binary search, is $O(NlogN)$.
+
+## 4. Torrent
+Solve for one source $s$ first. Root the tree at $s$ and let $dp_i$ be the minimum time needed to clear the subtree of $i$. To calculate $dp_i$, look at all children $c$ of $i$. Greedily, we want to push from $i$ to its children in decreasing $dp_c$ value. So, letting the sorted array of $dp_i$ be $C$, the answer for $dp_i=\max_{i=1}^{|C|}{dp_{C[i]}+i}$, as we clear the subtree of $C[i]$ at time $dp_{C[i]}+i$.
+
+Solving for two sources $a$ and $b$: consider the path from $a$ to $b$. Optimally, the propagation from $a$ and $b$ should not interfere with each other, so we can get the answer by deleting one of the edges on path between $a$ and $b$, thus splitting the tree into two disjoint trees. One tree is rooted at $a$, the other at $b$, and the answer is the maximum of the answers for the two trees.
+
+Let $A_i$ be the time needed to fill all nodes in $a$'s tree, given that we delete edge $i$ on the path between $a$ and $b$. This function is non-decreasing as $i$ increases. The similarly-defined function $B_i$ is non-increasing as $i$ increases. 
+
+The answer to the whole problem is the minimum value of $\max(A_i,B_i)$. The best value of $i$ would be the intersection point of the two functions, or the two points closest to it. So we can binary search on the first $i$ (denoted $M$) such that $A_i\ge{B_i}$, and the answer is just $\min(\max(A_M,B_M),\max(A_{M-1},B_{M-1}))$. $M$ is essentially the first point after the intersection point, and $M-1$ is the last point before the intersection point, so $M$ is the best answer for $A_i\ge{B_i}$ and $M-1$ is the best answer for $A_i<{B_i}$.
+
+Time complexity: $O(Nlog^2N)$.
+
+### Comments
+
+2: Good problem. I solved it pretty smoothly.
+
+4: I defined the answer as $A_i+B_i$ instead of $\max(A_i,B_i)$ (idk why), and wasted two hours solving that. If I wasn't stupid then I probably would've solved it in 1:30, i.e. this is probably gold level. Nice (good problem though).
