--- a/olympiads/international/2009/day_2/2009.md
+++ b/olympiads/international/2009/day_2/2009.md
@@ -3,8 +3,16 @@
 https://oj.uz/problem/view/IOI09_mecho
 
 ## 2 - Mecho
-
 Binary search on the latest time to leave the honeypot, $X$.
 For a given $X$, we must check if there is some path from $M$ to $D$ only on grassy squares.
  - First let's do a multisource BFS from the hives to find the earliest time that any square gets covered by bees.
  - Then we can do a BFS from Mecho's spot. A spot is reachable if the earliest time we can get to it is less than the earliest time it is covered by bees.
+
+## 3. Regions
+Let the number of nodes belonging to region $i$ be $sz[i]$.
+
+If $sz[r_1]\le{sz[r_2]}$, then we iterate over $r_1$. For each node with region $r_1$, we count the number of descendants with region $r_2$.
+
+If $sz[r_1]>sz[r_2]$, then we iterate over $r_2$. For each node with region $r_2$, we count the number of ancestors that have region $r_1$.
+
+Both can be done with Euler tour + binary search. Also, make sure to memoize queries. This ensures a worst case runtime of $O(NlogN+Q\sqrt{N}logN)$, when the size of each region is $\sqrt{N}$.
